--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - '3.5'
 before_install:
   - sudo apt-get update -qq
-  - pip  install coveralls
+  - pip  install coveralls pytest
 dist: xenial
 sudo: true
 install: pip install .
