--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,5 +1,8 @@
-name: Python Package using Conda
+name: build
 
+env:
+  PYTHON_MAIN_VERSION: 3.8
+  
 on:
   pull_request:
     branches:
@@ -14,7 +17,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [3.8]
+        python-version: [3.8, 3.7, 3.6, 3.5, 3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -43,24 +46,48 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
-    - name: Test with pytest / coverage
+    - name: Generate coverage report
       run: |
-        coverage run --source sidpy setup.py test
-        pwd
-        ls
+        pip install pytest
+        pip install pytest-cov
+        pytest --cov=./ --cov-report=xml
+        
+    - name: Upload coverage to Codecov
+      if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION }}
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./coverage.xml
+        # directory: ./coverage/reports/
+        flags: unittests
+        env_vars: OS,PYTHON
+        name: codecov-umbrella
+        fail_ci_if_error: true
+        # path_to_write_report: ./coverage/codecov_report.txt
+        verbose: true
         
     - name: Documentation build
+      if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION }}
       run: |
-        pip install sphinx>=3.1.1 sphinx-gallery sphinx-rtd-theme>=0.5.0 sphinx-autodoc-typehints numpydoc wget pysptools cvxopt scipy nbsphinx
+        pip install sphinx>=3.1.1 sphinx-gallery sphinx-rtd-theme>=0.5.0 sphinx-autodoc-typehints numpydoc wget nbsphinx
         sudo apt-get install pandoc
         sphinx-build -b html -aET docs/source docs/_build/html
         touch docs/_build/html/.nojekyll
         
     - name: Deploy to GitHub Pages
+      if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION }}
       uses: crazy-max/ghaction-github-pages@v2
       with:
         target_branch: gh-pages
         build_dir: docs/_build/html
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      
+    - name: Upload to PyPi
+      if: startsWith( github.ref, 'refs/tags') && matrix.python-version == env.PYTHON_MAIN_VERSION
+      env: 
+        PYPI_TOKEN_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
+        pip install wheel twine
+        python setup.py sdist bdist_wheel
+        twine upload --username "__token__" --password $PYPI_TOKEN_PASSWORD dist/*
