updated for change to ase

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,24 @@ test_scripts/
 \.pytest_cache/
 /docs/source/_autosummary/
 /docs/source/notebooks/
+example_data/.pyTEMlib.files.pkl
+example_data/AL_DFoffset0.00-1.hf5
+example_data/AL_DFoffset0.00-10.hf5
+example_data/AL_DFoffset0.00-11.hf5
+example_data/AL_DFoffset0.00-12.hf5
+example_data/AL_DFoffset0.00-13.hf5
+example_data/AL_DFoffset0.00-14.hf5
+example_data/AL_DFoffset0.00-15.hf5
+example_data/AL_DFoffset0.00-16.hf5
+example_data/AL_DFoffset0.00-17.hf5
+example_data/AL_DFoffset0.00-18.hf5
+example_data/AL_DFoffset0.00-19.hf5
+example_data/AL_DFoffset0.00-2.hf5
+example_data/AL_DFoffset0.00-3.hf5
+example_data/AL_DFoffset0.00-4.hf5
+example_data/AL_DFoffset0.00-5.hf5
+example_data/AL_DFoffset0.00-6.hf5
+example_data/AL_DFoffset0.00-7.hf5
+example_data/AL_DFoffset0.00-8.hf5
+example_data/AL_DFoffset0.00-9.hf5
+example_data/AL_DFoffset0.00.hf5
