--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,31 @@ example_data/AL_DFoffset0.00-7.hf5
 example_data/AL_DFoffset0.00-8.hf5
 example_data/AL_DFoffset0.00-9.hf5
 example_data/AL_DFoffset0.00.hf5
+example_data/AL_DFoffset0.00-20.hf5
+example_data/AL_DFoffset0.00-21.hf5
+example_data/AL_DFoffset0.00-22.hf5
+example_data/AL_DFoffset0.00-23.hf5
+example_data/AL_DFoffset0.00-24.hf5
+example_data/AL_DFoffset0.00-25.hf5
+example_data/AL_DFoffset0.00-26.hf5
+example_data/AL_DFoffset0.00-27.hf5
+example_data/AL_DFoffset0.00-28.hf5
+example_data/AL_DFoffset0.00-29.hf5
+example_data/AL_DFoffset0.00-30.hf5
+example_data/AL_DFoffset0.00-31.hf5
+example_data/AL_DFoffset0.00-32.hf5
+example_data/AL_DFoffset0.00-33.hf5
+example_data/AL_DFoffset0.00-34.hf5
+example_data/AL_DFoffset0.00-35.hf5
+example_data/AL_DFoffset0.00-36.hf5
+example_data/AL_DFoffset0.00-37.hf5
+example_data/AL_DFoffset0.00-38.hf5
+example_data/AL_DFoffset0.00-39.hf5
+example_data/AL_DFoffset0.00-40.hf5
+example_data/AL_DFoffset0.00-41.hf5
+example_data/AL_DFoffset0.00-42.hf5
+example_data/AL_DFoffset0.00-43.hf5
+example_data/AL_DFoffset0.00-44.hf5
+example_data/AL_DFoffset0.00-45.hf5
+example_data/AL_DFoffset0.00-46.hf5
+example_data/AL_DFoffset0.00-47.hf5
