--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -69,7 +69,7 @@ jobs:
         verbose: true
         
     - name: Documentation build
-      if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION && github.ref == 'refs/heads/master'}}
+      if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION && github.ref == 'refs/heads/main'}}
       run: |
         pip install sphinx>=3.1.1 sphinx-gallery sphinx-rtd-theme>=0.5.0 sphinx-autodoc-typehints numpydoc wget nbsphinx
         sudo apt-get install pandoc
@@ -77,7 +77,7 @@ jobs:
         touch docs/_build/html/.nojekyll
         
     - name: Deploy to GitHub Pages
-      if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION && github.ref == 'refs/heads/master'}}
+      if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION && github.ref == 'refs/heads/main'}}
       uses: crazy-max/ghaction-github-pages@v2
       with:
         target_branch: gh-pages
