removed edges_db.py
This file is no longer needed, superseded by edges_db.pkl

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,4 @@ pyTEMlib/data/old/fparam.txt
 pyTEMlib/data/old/microscopes.csv
 pyTEMlib/data/old/microscopes.xml
 pyTEMlib/data/old/path.txt
+pyTEMlib/edges_db_old.py
