update to new sidpy version

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,12 @@ pyTEMlib/data/old/microscopes.xml
 pyTEMlib/data/old/path.txt
 pyTEMlib/edges_db_old.py
 pyTEMlib/file_tools_qt_old.py
+notebooks/.ipynb_checkpoints/Untitled-checkpoint.ipynb
+data-structure.pptx
+notebooks/test.hf5
+notebooks/Untitled.ipynb
+~$data-structure.pptx
+notebooks/Untitled.ipynb
+notebooks/Untitled.ipynb
+notebooks/Untitled.ipynb
+notebooks/Untitled.ipynb
