--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,11 @@ notebooks/Untitled.ipynb
 notebooks/Untitled.ipynb
 notebooks/Untitled.ipynb
 notebooks/Untitled.ipynb
+example_data/GOLD_NP_DIFF-2-1.hf5
+example_data/GOLD_NP_DIFF-2-2.hf5
+example_data/GOLD_NP_DIFF-2.hf5
+example_data/GOLD-NP-DIFF-2-1.hf5
+example_data/GOLD-NP-DIFF-2.hf5
+.pyTEMlib.files.pkl
+.pyTEMlib.files.pkl
+.pyTEMlib.files.pkl
