--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,6 @@ example_data/GOLD-NP-DIFF-1.hf5
 example_data/GOLD-NP-DIFF-2-2.hf5
 example_data/GOLD-NP-DIFF-3.hf5
 notebooks/Untitled.ipynb
+notebooks/Untitled.ipynb
+notebooks/Untitled.ipynb
+.pyTEMlib.files.pkl
