fixed B edge X-section

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,5 @@ notebooks/Untitled.ipynb
 notebooks/Untitled.ipynb
 notebooks/Untitled.ipynb
 .pyTEMlib.files.pkl
+pyTEMlib/try-main.py
+pyTEMlib/try2.py
