--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,7 @@ notebooks/Untitled.ipynb
 pyTEMlib/try-main.py
 pyTEMlib/try2.py
 pyTEMlib/eels_dialog works.py
+example_data/EELS_STO2.dm3
+notebooks/EELS/1-s2.0-S0925838823027585-main.pdf
+notebooks/EELS/Analyse_Low_Loss2.ipynb
+notebooks/EELS/Analysis_Core_Loss (1).ipynb
