update notebook for colab

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,4 @@ notebooks/EELS/1-s2.0-S0925838823027585-main.pdf
 notebooks/EELS/Analyse_Low_Loss2.ipynb
 notebooks/EELS/Analysis_Core_Loss (1).ipynb
 server_user_id.txt
+example_data/EELS_STO3.hf5
