update notebooks for google colab

--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,6 @@ notebooks/EELS/Analyse_Low_Loss2.ipynb
 notebooks/EELS/Analysis_Core_Loss (1).ipynb
 server_user_id.txt
 example_data/EELS_STO3.hf5
+.pyTEMlib.files.pkl
+.pyTEMlib.files.pkl
+example_data/EELS_STO3-1.hf5
