eels_tools clean up
Cleaned up eels-tools
Added Austin's parallelization
Improved interactive eels dash board

--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ notebooks/Imaging/data/lineweight.txt
 .pyTEMlib.files.pkl
 notebooks/EELS/relax.csv
 Untitled.ipynb
+example_data/GOLD-NP-DIFF-2-3.hf5
