cleaned up kinematic_scattering

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,4 @@ notebooks/Imaging/data/lineweight.txt
 notebooks/EELS/relax.csv
 Untitled.ipynb
 example_data/GOLD-NP-DIFF-2-3.hf5
+example_data/GOLD-NP-DIFF-2-4.hf5
