--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 
 #######################################################################################
 # Book settings
-title                       : quatsch  # The title of the book. Will be placed in the left navbar.
-author                      : Gerd  # The author of the book
+title                       : pyTEMlib  # The title of the book. Will be placed in the left navbar.
+author                      : Gerd Duscher # The author of the book
 copyright                   : "2024"  # Copyright year to be placed in the footer
 logo                        : logo.png  # A path to the book logo
 
@@ -26,7 +26,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/gduscher/quatsch  # Online location of your book
+  url: https://github.com/pycroscopy/pyTEMlib  # Online location of your book
   path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
