--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,26 @@ _autosummary/pyTEMlib.file_tools.rst
 _autosummary/pyTEMlib.image_tools.rst
 _autosummary/pyTEMlib.info_widget.rst
 _autosummary/pyTEMlib.kinematic_scattering.rst
+_autosummary/pyTEMlib.animation.rst
+_autosummary/pyTEMlib.config_dir.rst
+_autosummary/pyTEMlib.crystal_tools.rst
+_autosummary/pyTEMlib.diffraction_plot.rst
+_autosummary/pyTEMlib.dynamic_scattering.rst
+_autosummary/pyTEMlib.eds_tools.rst
+_autosummary/pyTEMlib.eels_dialog.rst
+_autosummary/pyTEMlib.eels_dialog_utilities.rst
+_autosummary/pyTEMlib.file_tools_qt.rst
+_autosummary/pyTEMlib.graph_tools.rst
+_autosummary/pyTEMlib.graph_viz.rst
+_autosummary/pyTEMlib.image_dialog.rst
+_autosummary/pyTEMlib.image_dlg.rst
+_autosummary/pyTEMlib.interactive_image.rst
+_autosummary/pyTEMlib.microscope.rst
+_autosummary/pyTEMlib.peak_dialog.rst
+_autosummary/pyTEMlib.peak_dlg.rst
+_autosummary/pyTEMlib.probe_tools.rst
+_autosummary/pyTEMlib.rst
+_autosummary/pyTEMlib.sidpy_tools.rst
+_autosummary/pyTEMlib.simulation_tools.rst
+_autosummary/pyTEMlib.version.rst
+_autosummary/pyTEMlib.xrpa_x_sections.rst
