filetools update for updated emd reader

--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,5 @@ _autosummary/pyTEMlib.sidpy_tools.rst
 _autosummary/pyTEMlib.simulation_tools.rst
 _autosummary/pyTEMlib.version.rst
 _autosummary/pyTEMlib.xrpa_x_sections.rst
+notebooks/Imaging/Adaptive_Fourier_Filter-Copy1.ipynb
+notebooks/Spectroscopy/EELS_286.hf5
