--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -71,7 +71,7 @@ jobs:
     - name: Upload to PyPi
       if: startsWith( github.ref, 'refs/tags') && matrix.python-version == env.PYTHON_MAIN_VERSION
       env: 
-        PYPI_TOKEN_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        PYPI_TOKEN_PASSWORD: ${{ secrets.API_TOKEN_PYPI2 }}
       run: |
         pip install wheel twine
         python setup.py sdist bdist_wheel
