--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: ['3.9', '3.11', '3.12', '3.13']
+        python-version: ['3.9', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v3
