--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,5 @@ _autosummary/pyTEMlib.version.rst
 _autosummary/pyTEMlib.xrpa_x_sections.rst
 notebooks/Imaging/Adaptive_Fourier_Filter-Copy1.ipynb
 notebooks/Spectroscopy/EELS_286.hf5
+notebooks/Spectroscopy/Untitled1.ipynb
+pyTEMlib/info_widget2.py
