--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,7 @@ example_data/sto.hf5
 example_data/sto2.hf5
 example_data/sto3.hf5
 example_data/00_sto.hf5
+example_data/00_sto-1.hf5
+example_data/00_sto-2.hf5
+example_data/00_sto-3.hf5
+example_data/2-STEM SI.dm4
