--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ example_data/00_sto-1.hf5
 example_data/00_sto-2.hf5
 example_data/00_sto-3.hf5
 example_data/2-STEM SI.dm4
+example_data/0sto.hf5
