--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,10 @@ example_data/00_sto-2.hf5
 example_data/00_sto-3.hf5
 example_data/2-STEM SI.dm4
 example_data/0sto.hf5
+example_data/GOLD-NP-DIFF-2-10.hf5
+example_data/GOLD-NP-DIFF-2-11.hf5
+example_data/GOLD-NP-DIFF-2-5.hf5
+example_data/GOLD-NP-DIFF-2-6.hf5
+example_data/GOLD-NP-DIFF-2-7.hf5
+example_data/GOLD-NP-DIFF-2-8.hf5
+example_data/GOLD-NP-DIFF-2-9.hf5
