--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,4 @@ example_data/GOLD-NP-DIFF-2-6.hf5
 example_data/GOLD-NP-DIFF-2-7.hf5
 example_data/GOLD-NP-DIFF-2-8.hf5
 example_data/GOLD-NP-DIFF-2-9.hf5
+notebooks/Imaging/Cu.cif
