--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "scipy>=1.16.0",
+    "scipy",
     "numpy", 
     "pillow",
     "ase",
