--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pyTEMlib"
 dynamic = ["version"]
 description = "pyTEM: TEM Data Quantification library through a model-based approach"
 readme = "README.rst"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "Gerd Duscher", email = "gduscher@utk.edu"}
 ]
@@ -20,7 +20,6 @@ classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Environment :: Console",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Cython",
@@ -29,7 +28,6 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: Implementation :: CPython",
     "Topic :: Scientific/Engineering :: Information Analysis"
 ]
@@ -46,12 +44,12 @@ dependencies = [
     "lxml",
     "ipympl",
     "spglib",
+    "simpleitk",
     "scikit-image",
     "scikit-learn",
     "pyNSID>=0.0.7",
     "sidpy>=0.12.7",
     "SciFiReaders>=0.0.8",
-    "pycroscopy",
 ]
 
 [project.urls]
