eds quantification works

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,4 @@ example_data/GOLD-NP-DIFF-2-9.hf5
 notebooks/Imaging/Cu.cif
 pyTEMlib/data/fluorescent_yield.csv
 pyTEMlib/data/fluorescent_yield.xlsx
+notebooks/Spectroscopy/EDS-Copy2.ipynb
