--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,4 @@ notebooks/Spectroscopy/EDS-old.ipynb
 # MyST build outputs
 _build
 .github/workflows/deploy-old.yml
+example_data/GOLD-NP-DIFF-2-6.hf5
