--- a/.gitignore
+++ b/.gitignore
@@ -284,3 +284,5 @@ notebooks/Spectroscopy/EDS-old.ipynb
 _build
 .github/workflows/deploy-old.yml
 example_data/GOLD-NP-DIFF-2-6.hf5
+notebooks/Diffraction/unit_cell.ini
+notebooks/Diffraction/unit_cell.pov
