--- a/myst.yml
+++ b/myst.yml
@@ -17,22 +17,22 @@ project:
       children:
         - file: installation.md
         - file: notebooks/Introduction/2_usefull_equations.ipynb
-    - file: notebooks\1_Diffraction_Tools.ipynb
+    - file: notebooks/1_Diffraction_Tools.ipynb
       children:
-        - file: notebooks\Diffraction\D1_Diffraction_Rings.ipynb
-        - file: notebooks\Diffraction\D2_Diffraction_Spots.ipynb
-        - file: notebooks\Diffraction\D3_Ronchigram.ipynb
-    - file: notebooks\2_Image_Tools.ipynb
+        - file: notebooks/Diffraction/D1_Diffraction_Rings.ipynb
+        - file: notebooks/Diffraction/D2_Diffraction_Spots.ipynb
+        - file: notebooks/Diffraction/D3_Ronchigram.ipynb
+    - file: notebooks/2_Image_Tools.ipynb
       children:
-        - file: notebooks\Imaging\I1_Adaptive_Fourier_Filter.ipynb
-        - file: notebooks\Imaging\I2_Image_Registration.ipynb
-        - file: notebooks\Imaging\I3_Probe.ipynb
-        - file: notebooks\Imaging\I4_Structure_Analysis.ipynb
-    - file: notebooks\3_Spectroscopy_Tools.ipynb
+        - file: notebooks/Imaging/I1_Adaptive_Fourier_Filter.ipynb
+        - file: notebooks/Imaging/I2_Image_Registration.ipynb
+        - file: notebooks/Imaging/I3_Probe.ipynb
+        - file: notebooks/Imaging/I4_Structure_Analysis.ipynb
+    - file: notebooks/3_Spectroscopy_Tools.ipynb
       children:
         - file: notebooks/Spectroscopy/Analyse_EELS.ipynb
-        - file: notebooks\Spectroscopy\EDS.ipynb
-        - file: notebooks\Spectroscopy\EDS-SI.ipynb
+        - file: notebooks/Spectroscopy/EDS.ipynb
+        - file: notebooks/Spectroscopy/EDS-SI.ipynb
 site:
   options:
     logo: logo.png
