--- a/myst.yml
+++ b/myst.yml
@@ -13,6 +13,7 @@ project:
       output: exports/book.pdf
   toc:
     - file: intro.md
+    - file: installation.md
       children:
         - file: notebooks/Introduction/1_Installatioo.ipynb
         - file: notebooks/Introduction/2_Open_File.ipynb
