update diffraction_tools - HOLZ

--- a/.gitignore
+++ b/.gitignore
@@ -297,3 +297,4 @@ pyTEMlib/eds_tools/get_bote_salvat.py
 .virtual_documents/notebooks/1_Diffraction_Tools.ipynb
 .virtual_documents/notebooks/2_Image_Tools.ipynb
 .virtual_documents/notebooks/3_Spectroscopy_Tools.ipynb
+pyTEMlib/diffraction_tools/kinematic copy.py
